# dev-essential

./: .gitignore  README.md  attach.sh  build.sh  run-X11.sh  save.sh
context/root/opt/Wtx/: CMakeLists.txt  FormModel.cpp  FormModel.h  FormModel.sav  MessageBox.cpp  MessageBox.h  PopupMessage.cpp  PopupMessage.h  PopupQuestion.cpp  PopupQuestion.h  PopupYesNo.cpp  PopupYesNo.h  TableView.cpp  TableView.h  TableViewDef.cpp  TableViewDef.h  Template.cpp  Template.h  TemplateFormView.cpp  TemplateFormView.h  Util.h  Wtx.cpp  Wtx.css  Wtx.h  Wtx.xml
context/root/opt/Wtx/Addons/: CMakeLists.txt
context/root/opt/Wtx/Core/: CMakeLists.txt
context/root/opt/Wtx/Dbo/: BaseItemTpl.h  BaseTableDef.cpp  BaseTableDef.h  CMakeLists.txt  ConnectionDef.h  Dbo.h  DetailForm.h  Field.cpp  Field.h  FieldBase.h  FieldBelongsTo.h  FieldBelongsTo_imp.h  FieldBigInt.h  FieldBoolean.h  FieldCurrency.cpp  FieldCurrency.h  FieldDate.h  FieldDateTime.h  FieldDefBase.cpp  FieldDefBase.h  FieldDefCheckBox.cpp  FieldDefCheckBox.h  FieldDefCollectionEdit.cpp  FieldDefCollectionEdit.h  FieldDefComboBox.cpp  FieldDefComboBox.h  FieldDefCurrencyEdit.cpp  FieldDefCurrencyEdit.h  FieldDefDateEdit.cpp  FieldDefDateEdit.h  FieldDefDateTimeEdit.cpp  FieldDefDateTimeEdit.h  FieldDefDoubleSpin.cpp  FieldDefDoubleSpin.h  FieldDefEmailEdit.cpp  FieldDefEmailEdit.h  FieldDefHasMany.cpp  FieldDefHasMany.h  FieldDefIntSpin.cpp  FieldDefIntSpin.h  (+62 more)
context/root/opt/Wtx/Lib/: CMakeLists.txt  Lib.h  README.md
context/root/opt/Wtx/Mail/: CMakeLists.txt  Message.cpp  Message.h
context/root/opt/Wtx/Sys/: Sys.cpp  (+5 more)
(+225 files in other folders)
